# cmatrix

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  cmatrix.1  cmatrix.c  cmatrix.spec.in  configure.ac
